// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighlightedSearchTokens when highlighting applies new token entity to selected area 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 5,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "key": "123",
      "text": "connectors a Trove",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "token": Object {
          "category": "new_token",
          "end": 5,
          "start": 0,
          "token": "conne",
        },
      },
      "mutability": "MUTABLE",
      "type": "TOKEN",
    },
  },
}
`;

exports[`HighlightedSearchTokens when modifying query with tokens changes entity category 1`] = `
Object {
  "0": Object {
    "data": Object {
      "onHandleMouseDown": [Function],
      "token": Object {
        "category": "internal_tag",
        "end": 10,
        "start": 0,
        "token": "connectors",
      },
    },
    "mutability": "MUTABLE",
    "type": "TOKEN",
  },
  "1": Object {
    "data": Object {
      "onHandleMouseDown": [Function],
      "token": Object {
        "category": "user_name",
        "end": 18,
        "start": 13,
        "token": "Trove",
      },
    },
    "mutability": "MUTABLE",
    "type": "TOKEN",
  },
}
`;

exports[`HighlightedSearchTokens when modifying query with tokens renders applied entites 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 10,
          "offset": 0,
        },
        Object {
          "key": 1,
          "length": 5,
          "offset": 13,
        },
      ],
      "inlineStyleRanges": Array [],
      "key": "123",
      "text": "connectors a Trove",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "onHandleMouseDown": [Function],
        "token": Object {
          "category": "internal_tag",
          "end": 10,
          "start": 0,
          "token": "connectors",
        },
      },
      "mutability": "MUTABLE",
      "type": "TOKEN",
    },
    "1": Object {
      "data": Object {
        "onHandleMouseDown": [Function],
        "token": Object {
          "category": "company",
          "end": 18,
          "start": 13,
          "token": "Trove",
        },
      },
      "mutability": "MUTABLE",
      "type": "TOKEN",
    },
  },
}
`;

exports[`HighlightedSearchTokens when resizing tokens updateTokenEntity returns editorState with new token 1`] = `
Object {
  "blocks": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "entityRanges": Array [
        Object {
          "key": 0,
          "length": 7,
          "offset": 0,
        },
      ],
      "inlineStyleRanges": Array [],
      "key": "123",
      "text": "connectors",
      "type": "unstyled",
    },
  ],
  "entityMap": Object {
    "0": Object {
      "data": Object {
        "onHandleMouseDown": [Function],
        "token": Object {
          "category": "internal_tag",
          "end": 10,
          "start": 0,
          "token": "connectors",
        },
      },
      "mutability": "MUTABLE",
      "type": "TOKEN",
    },
  },
}
`;
